tests/compile_fail/as_mut/struct_attr_empty.stderr
error: `#[as_mut(...)]` can only be applied to structs with exactly one field
 --> tests/compile_fail/as_mut/struct_attr_empty.rs:2:1
  |
2 | #[as_mut(forward)]
  | ^
